--- a/build.gradle
+++ b/build.gradle
@@ -4,35 +4,35 @@ buildscript {
     // Define versions in a single place
     ext {
         // Sdk and tools
-        compileSdkVersion = 28
+        compileSdkVersion = 29
         minSdkVersion = 21
-        targetSdkVersion = 28
+        targetSdkVersion = 29
 
         // App dependencies
         appCompatVersion = '1.1.0'
-        constraintLayoutVersion = '2.0.0-beta3'
+        constraintLayoutVersion = '2.0.0-beta7'
         coreTestingVersion = '2.0.0'
         coroutinesVersion = "1.3.0-M2"
         espressoVersion = '3.1.1'
-        fragmentVersion = '1.2.0-rc02'
-        glideVersion = '4.9.0'
+        fragmentVersion = '1.3.0-alpha06'
+        glideVersion = '4.11.0'
         gradleVersion = '3.5.1'
         gsonVersion = '2.8.2'
         junitVersion = '4.12'
         kotlinVersion = '1.3.41'
         ktlintVersion = '0.33.0'
-        ktxVersion = '1.1.0'
-        lifecycleVersion = '2.2.0-rc02'
-        materialVersion = '1.2.0-alpha01'
-        navigationVersion = '2.1.0'
-        recyclerViewVersion = '1.1.0-alpha05'
-        roomVersion = '2.2.1'
+        ktxVersion = '1.3.0'
+        lifecycleVersion = '2.2.0'
+        materialVersion = '1.3.0-alpha01'
+        navigationVersion = '2.3.0'
+        recyclerViewVersion = '1.2.0-alpha04'
+        roomVersion = '2.2.5'
         runnerVersion = '1.0.1'
         truthVersion = '0.42'
         testExtJunit = '1.1.0'
         uiAutomatorVersion = '2.2.0'
-        viewPagerVersion = '1.0.0-rc01'
-        workVersion = '2.2.0'
+        viewPagerVersion = '1.1.0-alpha01'
+        workVersion = '2.3.4'
     }
 
     repositories {
@@ -42,7 +42,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         // NOTE: Do not place your application dependencies here; they belong
