--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
         ktlintVersion = '0.33.0'
         ktxVersion = '1.3.0'
         lifecycleVersion = '2.2.0'
+        viewModelVersion = '2.2.0'
         materialVersion = '1.3.0-alpha01'
         navigationVersion = '2.3.0'
         recyclerViewVersion = '1.2.0-alpha04'
