--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,11 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    externalNativeBuild {
+        cmake {
+            path file('cpp/CMakeLists.txt')
+        }
+    }
     dataBinding {
         enabled true
     }
