--- a/app/cpp/CMakeLists.txt
+++ b/app/cpp/CMakeLists.txt
@@ -8,5 +8,7 @@ add_library( # Sets the name of the library.
              SHARED
 
              # Provides a relative path to your source file(s).
-             native-lib.cpp )
+             native-lib.cpp
+             Person.cpp
+        )
 
