仿qq小红点拖拽实现思路

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ android {
             path file('cpp/CMakeLists.txt')
         }
     }
+    ndkVersion '22.0.7026061'
     dataBinding {
         enabled true
     }
