feature: 自定义View事件分发机制学习 (100%);

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,7 @@
         <activity android:name=".ui.ResultActivity" android:launchMode="singleTop"/>
         <activity android:name=".app.base.BaseActivity" android:launchMode="singleTop"/>
         <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".ui.TestUIEventActivity" />
     </application>
 
 </manifest>
